media-stack/nzbgett/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbgett
  namespace: media-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nzbgett
      app.kubernetes.io/name: nzbgett-ingress

  template:
    metadata:
      labels:
        app: nzbgett
    spec:
      containers:
        - name: nzbgett
          image: linuxserver/nzbget
          ports:
            - containerPort: 6789
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: nzbgett-config-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: nzbgett-samba-pvc
