media-stack/nzbgett/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbgett-service
  namespace: media-stack
spec:
  selector:
    app: nzbgett
  ports:
    - protocol: TCP
      port: 6789
      targetPort: 6789
  type: ClusterIP
