media-stack/nzbgett/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzbgett-ingress
  namespace: media-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    gethompage.dev/decscription: NZBGett
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: http://nzbgett.rke/img/icons.png
    gethomepage.dev/name: NZBGett
    gethomepage.dev/widget.type: "nzbget"
    gethomepage.dev/widget.url: "nzbgett-service.media-stack.svc.cluster.local:6789"
    gethomepage.dev/widget.username: "homepage"
    gethomepage.dev/widget.password: "test1"
spec:
  rules:
    - host: nzbgett.rke # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nzbgett-service
                port:
                  number: 6789
